feat: Initialized numero and correct hyperlinks

--- a/code.html
+++ b/code.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!doctype html> <!--Code-->
 <html lang="en" data-bs-theme="dark">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Project Name</title>
+    <title>Numero</title>
     <link href="css/site.css" rel="stylesheet">
     <link href="css/prism.css" rel="stylesheet">
     <!-- Bootstrap -->
@@ -23,7 +23,7 @@
     <nav class="navbar sticky-top navbar-expand-md w-100" id="pn-navigation-bar"
         style="background-color: var(--bs-body-bg)">
         <div class="container-fluid">
-            <h2 class="project-heading mt-2">Project Name</h2> 
+            <h2 class="project-heading mt-2">Project Name</h2>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
