--- a/app/Template code.html
+++ b/app/Template code.html
@@ -1,11 +1,13 @@
-<!doctype html> <!--project-->
+<!doctype html> <!--Code-->
 <html lang="en" data-bs-theme="dark">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Project Name</title>
-    <link href="css/site.css" rel="stylesheet">
+    <link href="/css/site.css" rel="stylesheet">
+    <link href="/css/prism.css" rel="stylesheet">
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <!-- Fonts -->
@@ -13,15 +15,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan&family=Poppins:wght@400;500;700&display=swap"
         rel="stylesheet">
-    <script src="js/darkmode.js"></script>
+    <script src="/js/darkmode.js"></script>
 </head>
 
-<body class="d-flex flex-column ps-1 ms-5 me-5">
+<body class="d-flex flex-column ps-1 mx-5">
 
     <nav class="navbar sticky-top navbar-expand-md w-100" id="pn-navigation-bar"
         style="background-color: var(--bs-body-bg)">
         <div class="container-fluid">
-            <h2 class="project-heading mt-2">Project Name</h2>
+            <h2 class="project-heading mt-2">Numero</h2> 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -29,18 +31,18 @@
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav ms-auto fs-5">
                     <li class="nav-item pt-1 mt-2">
-                        <a class="nav-link ps-5" href="index.html">Home</a>
+                        <a class="nav-link ps-5" href="/index.html">Home</a>
                     </li>
                     <li class="nav-item pt-1 mt-2">
-                        <a class="nav-link ps-5 active" href="#">Project</a>
+                        <a class="nav-link ps-5" href="numero.html">Project</a>
                     </li>
                     <li class="nav-item pt-2 mt-2">
-                        <a class="nav-link ps-5" href="code.html">Code</a>
+                        <a class="nav-link ps-5 active" href="#">Code</a>
                     </li>
                     <li class="nav-item ps-5 pe-5">
                         <button class="btn bg-transparent border-0" onclick="myFunction()"> <!-- Dark Mode -->
-                            <img id="sun" src="assets/icons/sun.svg" alt="Dark Mode" style="height: 40px;">
-                            <img id="moon" src="assets/icons/moon.svg" alt="Dark Mode" style="height: 40px;">
+                            <img id="sun" src="/assets/icons/sun.svg" alt="Dark Mode" style="height: 40px;">
+                            <img id="moon" src="/assets/icons/moon.svg" alt="Dark Mode" style="height: 40px;">
                         </button>
                     </li>
                 </ul>
@@ -48,9 +50,27 @@
         </div>
     </nav>
 
-    <div class="h-100 ms-2 ps-1">
-        <h1>PROJECT PAGE</h1>
-    </div>
+    <section class="flex-shrink-0">
+        <div class="container"> <!--ps-1 mx-0-->
+            <div class="row row-cols-1 row-cols-lg-2">
+                <div class="col-lg-8">
+                    <pre class="line-numbers">
+                        <code class="language-javascript">
+                            //Call Hello World
+                            function helloworld() {
+                                alert("hello world");
+                            }
+                        </code>
+                    </pre>
+                </div>
+                <div class="col-lg-4 pt-3">
+                    <p>The Code is structured in function</p>
+                    <h5>Hello World</h5>
+                    <p>helloworld() is a function that displays an alert with the message "Hello World"</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <footer class="border-top mt-2">
         <div class="container py-4">
@@ -75,8 +95,17 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous">
-        </script>
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
+    <script src="/js/prism.js"></script>
+    <script>
+        Prism.plugins.NormalizeWhitespace.setDefaults({
+            'remove-trailing': true,
+            'remove-indent': true,
+            'left-trim': true,
+            'right-trim': true
+        })
+    </script>
 </body>
 
 </html>
