--- a/app/Template project.html
+++ b/app/Template project.html
@@ -1,11 +1,12 @@
+<!-- BoldDigits OR Numero-->
 <!doctype html> <!--project-->
 <html lang="en" data-bs-theme="dark">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Project Name</title>
-    <link href="css/site.css" rel="stylesheet">
+    <title>Numero</title>
+    <link href="/css/site.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <!-- Fonts -->
@@ -13,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan&family=Poppins:wght@400;500;700&display=swap"
         rel="stylesheet">
-    <script src="js/darkmode.js"></script>
+    <script src="/js/darkmode.js"></script>
 </head>
 
 <body class="d-flex flex-column ps-1 ms-5 me-5">
@@ -21,7 +22,7 @@
     <nav class="navbar sticky-top navbar-expand-md w-100" id="pn-navigation-bar"
         style="background-color: var(--bs-body-bg)">
         <div class="container-fluid">
-            <h2 class="project-heading mt-2">Project Name</h2>
+            <h2 class="project-heading mt-2">Numero</h2>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -29,18 +30,18 @@
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav ms-auto fs-5">
                     <li class="nav-item pt-1 mt-2">
-                        <a class="nav-link ps-5" href="index.html">Home</a>
+                        <a class="nav-link ps-5" href="/index.html">Home</a>
                     </li>
                     <li class="nav-item pt-1 mt-2">
                         <a class="nav-link ps-5 active" href="#">Project</a>
                     </li>
                     <li class="nav-item pt-2 mt-2">
-                        <a class="nav-link ps-5" href="code.html">Code</a>
+                        <a class="nav-link ps-5" href="numero-code.html">Code</a>
                     </li>
                     <li class="nav-item ps-5 pe-5">
                         <button class="btn bg-transparent border-0" onclick="myFunction()"> <!-- Dark Mode -->
-                            <img id="sun" src="assets/icons/sun.svg" alt="Dark Mode" style="height: 40px;">
-                            <img id="moon" src="assets/icons/moon.svg" alt="Dark Mode" style="height: 40px;">
+                            <img id="sun" src="/assets/icons/sun.svg" alt="Dark Mode" style="height: 40px;">
+                            <img id="moon" src="/assets/icons/moon.svg" alt="Dark Mode" style="height: 40px;">
                         </button>
                     </li>
                 </ul>
@@ -48,9 +49,11 @@
         </div>
     </nav>
 
-    <div class="h-100 ms-2 ps-1">
-        <h1>PROJECT PAGE</h1>
-    </div>
+    <section class="flex-shrink-0">
+        <div class="h-100 ms-2 ps-1">
+            <h1>PROJECT PAGE</h1>
+        </div>
+    </section>
 
     <footer class="border-top mt-2">
         <div class="container py-4">
