--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
                     style="background-image: url('');" alt="">
                     <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                        <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Short title, long jacket</h3>
+                        <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Numero</h3>
                     <!--
                     <ul class="d-flex list-unstyled mt-auto"> 
                       <li class="me-auto">
@@ -72,7 +72,7 @@
                     </ul>
                     -->
                     </div>
-                    <a href="#" class="stretched-link"></a>
+                    <a href="app/numero.html" class="stretched-link"></a>
                 </div>
             </div>
 
