--- a/app/Template project.html
+++ b/app/Template project.html
@@ -50,8 +50,17 @@
     </nav>
 
     <section class="flex-shrink-0">
-        <div class="h-100 ms-2 ps-1">
-            <h1>PROJECT PAGE</h1>
+        <div class="container pe-4">
+            <div class="row row-cols-1 row-cols-lg-2">
+                <div class="col">
+                    <h1>Numero: A Coding PRoject</h1>
+                </div>
+                <div class="col">
+                    <p align="justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa cum, ut quo
+                        sapiente nihil dicta quidem quasi nobis totam repudiandae, nisi commodi consequatur quam
+                        praesentium rem sequi, magni molestias veritatis?</p>
+                </div>
+            </div>
         </div>
     </section>
 
