fix: Make margins equal

--- a/app/numero-code.html
+++ b/app/numero-code.html
@@ -39,7 +39,7 @@
                     <li class="nav-item pt-2 mt-2">
                         <a class="nav-link ps-5 active" href="#">Code</a>
                     </li>
-                    <li class="nav-item ps-5 pe-5">
+                    <li class="nav-item ps-5 pe-4 me-2">
                         <button class="btn bg-transparent border-0" onclick="myFunction()"> <!-- Dark Mode -->
                             <img id="sun" src="/assets/icons/sun.svg" alt="Dark Mode" style="height: 40px;">
                             <img id="moon" src="/assets/icons/moon.svg" alt="Dark Mode" style="height: 40px;">
@@ -51,7 +51,7 @@
     </nav>
 
     <section class="flex-shrink-0">
-        <div class="container"> <!--ps-1 mx-0-->
+        <div class="container pe-3"> <!--ps-1 mx-0-->
             <div class="row row-cols-1 row-cols-lg-2">
                 <div class="col-lg-8">
                     <pre class="line-numbers">
@@ -63,7 +63,7 @@
                         </code>
                     </pre>
                 </div>
-                <div class="col-lg-4 pt-3">
+                <div class="col-lg-4 pt-3" style="text-align: justify;">
                     <p>The Code is structured in function</p>
                     <h5>Hello World</h5>
                     <p>helloworld() is a function that displays an alert with the message "Hello World"</p>
