--- a/app/numero.html
+++ b/app/numero.html
@@ -38,7 +38,7 @@
                     <li class="nav-item pt-2 mt-2">
                         <a class="nav-link ps-5" href="numero-code.html">Code</a>
                     </li>
-                    <li class="nav-item ps-5 pe-5">
+                    <li class="nav-item ps-5 pe-4 me-2">
                         <button class="btn bg-transparent border-0" onclick="myFunction()"> <!-- Dark Mode -->
                             <img id="sun" src="/assets/icons/sun.svg" alt="Dark Mode" style="height: 40px;">
                             <img id="moon" src="/assets/icons/moon.svg" alt="Dark Mode" style="height: 40px;">
@@ -50,13 +50,13 @@
     </nav>
 
     <section class="flex-shrink-0">
-        <div class="container pe-4">
+        <div class="container pe-3">
             <div class="row row-cols-1 row-cols-lg-2">
                 <div class="col">
                     <h1>Numero: A Coding PRoject</h1>
                 </div>
                 <div class="col">
-                    <p align="justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa cum, ut quo
+                    <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa cum, ut quo
                         sapiente nihil dicta quidem quasi nobis totam repudiandae, nisi commodi consequatur quam
                         praesentium rem sequi, magni molestias veritatis?</p>
                 </div>
