--- a/app/Template code.html
+++ b/app/Template code.html
@@ -1,11 +1,13 @@
-<!doctype html> <!--Code-->
-<html lang="en" data-bs-theme="dark">
+<!-- BoldDigits OR Numero-->
+<!doctype html> <!--CODE-->
+<html lang="en" data-bs-theme="light">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Project Name</title>
+    <title>Numero</title>
     <link href="/css/site.css" rel="stylesheet">
+    <link href="/css/project.css" rel="stylesheet">
     <link href="/css/prism.css" rel="stylesheet">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -23,23 +25,23 @@
     <nav class="navbar sticky-top navbar-expand-md w-100" id="pn-navigation-bar"
         style="background-color: var(--bs-body-bg)">
         <div class="container-fluid">
-            <h2 class="project-heading mt-2">Numero</h2> 
+            <h2 class="project-heading mt-2">Numero</h2>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarText">
-                <ul class="navbar-nav ms-auto fs-5">
-                    <li class="nav-item pt-1 mt-2">
+                <ul class="navbar-nav ms-auto fs-5 bg-primary-md">
+                    <li class="nav-item pt-md-1 mt-md-2">
                         <a class="nav-link ps-5" href="/index.html">Home</a>
                     </li>
-                    <li class="nav-item pt-1 mt-2">
-                        <a class="nav-link ps-5" href="numero.html">Project</a>
+                    <li class="nav-item pt-md-1 mt-md-2">
+                        <a class="nav-link ps-5" href="/app/numero.html">Project</a>
                     </li>
-                    <li class="nav-item pt-2 mt-2">
+                    <li class="nav-item pt-md-2 mt-md-2">
                         <a class="nav-link ps-5 active" href="#">Code</a>
                     </li>
-                    <li class="nav-item ps-5 pe-5">
+                    <li class="nav-item ps-5 pe-4 me-2 hid">
                         <button class="btn bg-transparent border-0" onclick="myFunction()"> <!-- Dark Mode -->
                             <img id="sun" src="/assets/icons/sun.svg" alt="Dark Mode" style="height: 40px;">
                             <img id="moon" src="/assets/icons/moon.svg" alt="Dark Mode" style="height: 40px;">
