--- a/app/Template project.html
+++ b/app/Template project.html
@@ -1,12 +1,14 @@
 <!-- BoldDigits OR Numero-->
 <!doctype html> <!--project-->
-<html lang="en" data-bs-theme="dark">
+<html lang="en" data-bs-theme="light">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Numero</title>
     <link href="/css/site.css" rel="stylesheet">
+    <link href="/css/project.css" rel="stylesheet">
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <!-- Fonts -->
@@ -17,7 +19,7 @@
     <script src="/js/darkmode.js"></script>
 </head>
 
-<body class="d-flex flex-column ps-1 ms-5 me-5">
+<body class="d-flex flex-column ps-1 mx-5">
 
     <nav class="navbar sticky-top navbar-expand-md w-100" id="pn-navigation-bar"
         style="background-color: var(--bs-body-bg)">
@@ -28,17 +30,17 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarText">
-                <ul class="navbar-nav ms-auto fs-5">
-                    <li class="nav-item pt-1 mt-2">
+                <ul class="navbar-nav ms-auto fs-5 bg-primary-md">
+                    <li class="nav-item pt-md-1 mt-md-2">
                         <a class="nav-link ps-5" href="/index.html">Home</a>
                     </li>
-                    <li class="nav-item pt-1 mt-2">
+                    <li class="nav-item pt-md-1 mt-md-2">
                         <a class="nav-link ps-5 active" href="#">Project</a>
                     </li>
-                    <li class="nav-item pt-2 mt-2">
+                    <li class="nav-item pt-md-2 mt-md-2">
                         <a class="nav-link ps-5" href="numero-code.html">Code</a>
                     </li>
-                    <li class="nav-item ps-5 pe-5">
+                    <li class="nav-item ps-5 pe-4 me-2 hid">
                         <button class="btn bg-transparent border-0" onclick="myFunction()"> <!-- Dark Mode -->
                             <img id="sun" src="/assets/icons/sun.svg" alt="Dark Mode" style="height: 40px;">
                             <img id="moon" src="/assets/icons/moon.svg" alt="Dark Mode" style="height: 40px;">
@@ -56,7 +58,7 @@
                     <h1>Numero: A Coding PRoject</h1>
                 </div>
                 <div class="col">
-                    <p align="justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa cum, ut quo
+                    <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa cum, ut quo
                         sapiente nihil dicta quidem quasi nobis totam repudiandae, nisi commodi consequatur quam
                         praesentium rem sequi, magni molestias veritatis?</p>
                 </div>
