feat: Create layout

--- a/app/numero-code.html
+++ b/app/numero-code.html
@@ -20,7 +20,7 @@
     <script src="/js/darkmode.js"></script>
 </head>
 
-<body class="d-flex flex-column ps-1 mx-5">
+<body class="d-flex flex-column ps-md-1 mx-md-5">
 
     <nav class="navbar sticky-top navbar-expand-md w-100" id="pn-navigation-bar"
         style="background-color: var(--bs-body-bg)">
@@ -74,7 +74,7 @@
         </div>
     </section>
 
-    <footer class="border-top mt-2">
+    <footer class="border-top mt-2 fixed-bottom" style="background-color: var(--bs-body-bg)">
         <div class="container py-4">
             <div class="row row-cols-1 row-cols-md-6 gy-1 pt-1">
                 <div class="col col-md-6">
