--- a/app/numero.html
+++ b/app/numero.html
@@ -19,7 +19,7 @@
     <script src="/js/darkmode.js"></script>
 </head>
 
-<body class="d-flex flex-column ps-1 mx-5">
+<body class="d-flex flex-column ps-md-1 mx-md-5">
 
     <nav class="navbar sticky-top navbar-expand-md w-100" id="pn-navigation-bar"
         style="background-color: var(--bs-body-bg)">
@@ -51,25 +51,48 @@
         </div>
     </nav>
 
-    <section class="flex-shrink-0"> 
-        <div class="container pe-3">
+    <section class="flex-shrink-0 minHeight">
+        <div class="container pe-3 mt-2">
             <div class="row row-cols-1 row-cols-lg-2">
-                <div class="col">
-                    <h1>Numero: A Coding Project</h1>
-                    <h4>Live life one loop at a time. A javascript coding exercise using loops. Write a program that
-                        displays the numbers from 0 to 100. Display the even numbers in BOLD.</h4>
+                <div class="col border-end border-2">
+                    <h5>Live life one loop at a time. A javascript coding exercise using loops. Write a program that
+                        displays the numbers from 0 to 100. Display the even numbers in BOLD.</h5>
+                    <h2 class="mt-3 pt-xxl-5 border-bottom border-2">Instructions</h2>
+                    <p>Enter a starting value and a ending value. Press button and value will appear</p>
                 </div>
                 <div class="col">
-                    <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa cum,
-                        ut quo
-                        sapiente nihil dicta quidem quasi nobis totam repudiandae, nisi commodi consequatur quam
-                        praesentium rem sequi, magni molestias veritatis?</p>
+                    <div>
+                        <h5>Enter Values</h5>
+                        <form class="row gy-2 gx-3">
+                            <div class="col">
+                                <input id="startValue" type="number" class="form-control" placeholder="Start Value"
+                                    value="0" aria-label="Start Value">
+                            </div>
+                            <div class="col">
+                                <input id="endValue" type="number" class="form-control" placeholder="End Value"
+                                value="100" aria-label="End Value">
+                            </div>
+                            <div class="col-12 d-flex justify-content-lg-end">
+                                <button type="button" id="btnSubmit" class="btn" style="background-color: var(--bs-dark-text-emphasis); color: var(--bs-body-bg);">
+                                    Submit
+                                </button>
+                            </div>
+                        </form>
+                        <h2 class="mt-3 border-bottom border-2">Results</h2>
+                        <div class="table-responsive">
+                            <table class="table table-striped table-sm">
+                                <tbody id="results">
+                                    <!--Results-->
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <footer class="border-top mt-2">
+    <footer class="border-top mt-2 fixed-bottom" style="background-color: var(--bs-body-bg)">
         <div class="container py-4">
             <div class="row row-cols-1 row-cols-md-6 gy-1 pt-1">
                 <div class="col col-md-6">
