refactor: Body section

--- a/app/Template project.html
+++ b/app/Template project.html
@@ -19,7 +19,7 @@
     <script src="/js/darkmode.js"></script>
 </head>
 
-<body class="d-flex flex-column ps-1 mx-5">
+<body class="d-flex flex-column ps-md-1 mx-md-5">
 
     <nav class="navbar sticky-top navbar-expand-md w-100" id="pn-navigation-bar"
         style="background-color: var(--bs-body-bg)">
