--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-bs-theme="dark">
+<html lang="en" data-bs-theme="light">
 
 <head>
     <title>JSJunction: A Coding Project By Karandeep Padam</title>
@@ -19,7 +19,7 @@
     <script src="js/darkmode.js"></script>
 </head>
 
-<body class="d-flex flex-column mt-4 ms-5 me-5">
+<body class="d-flex flex-column mt-4 mx-5">
 
     <nav class="navbar navbar-expand-sm hidden">
         <div class="container-fluid">
