--- a/app/numero.html
+++ b/app/numero.html
@@ -66,11 +66,11 @@
                         <form class="row gy-2 gx-3">
                             <div class="col">
                                 <input id="startValue" type="number" class="form-control" placeholder="Start Value"
-                                    value="0" aria-label="Start Value">
+                                    value=0 aria-label="Start Value">
                             </div>
                             <div class="col">
                                 <input id="endValue" type="number" class="form-control" placeholder="End Value"
-                                value="100" aria-label="End Value">
+                                value=100 aria-label="End Value">
                             </div>
                             <div class="col-12 d-flex justify-content-lg-end">
                                 <button type="button" id="btnSubmit" class="btn" style="background-color: var(--bs-dark-text-emphasis); color: var(--bs-body-bg);">
@@ -79,7 +79,7 @@
                             </div>
                         </form>
                         <h2 class="mt-3 border-bottom border-2">Results</h2>
-                        <div class="table-responsive">
+                        <div class="table-responsive mb-5 pb-5">
                             <table class="table table-striped table-sm">
                                 <tbody id="results">
                                     <!--Results-->
@@ -117,7 +117,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous">
         </script>
-    <script src="/js/site.js"></script>
+    <script src="/js/numero.js"></script>
+    <script>
+        document.getElementById("btnSubmit").addEventListener("click",getValues);
+    </script>
 </body>
 
 </html>
