--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!--cards-->
 
     <div class="container mt-5">
-        <h2 class="subhead text-center hidden">Purus sagittis fringilla arcu neque.</h2>
+        <h2 class="subhead text-center hidden">Below are the list of apps</h2>
         <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 pt-5 pb-4">
             <div class="col hidden">
                 <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
@@ -80,9 +80,9 @@
                 <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
                     style="background-image: url('');" alt="">
                     <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                        <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Short title, long jacket</h3>
+                        <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Rewind</h3>
                     </div>
-                    <a href="#" class="stretched-link"></a>
+                    <a href="app/rewind.html" class="stretched-link"></a>
                 </div>
             </div>
 
