--- a/app/Template code.html
+++ b/app/Template code.html
@@ -53,7 +53,7 @@
     </nav>
 
     <section class="flex-shrink-0">
-        <div class="container"> <!--ps-1 mx-0-->
+        <div class="container pe-3 mb-5 pb-5"> <!--ps-1 mx-0-->
             <div class="row row-cols-1 row-cols-lg-2">
                 <div class="col-lg-8">
                     <pre class="line-numbers">
