fix: Hide divider in mobile view

--- a/app/numero.html
+++ b/app/numero.html
@@ -54,7 +54,7 @@
     <section class="flex-shrink-0 minHeight">
         <div class="container pe-3 mt-2">
             <div class="row row-cols-1 row-cols-lg-2">
-                <div class="col border-end border-2">
+                <div class="col border-right">
                     <h5>Live life one loop at a time. A javascript coding exercise using loops. Write a program that
                         displays the numbers from 0 to 100. Display the even numbers in BOLD.</h5>
                     <h2 class="mt-3 pt-xxl-5 border-bottom border-2">Instructions</h2>
