--- a/app/rewind.html
+++ b/app/rewind.html
@@ -54,7 +54,7 @@
     <section class="flex-shrink-0 minHeight">
         <div class="container pe-3 mt-2">
             <div class="row row-cols-1 row-cols-lg-2">
-                <div class="col border-end border-2">
+                <div class="col border-right">
                     <h5>There and back again. A javascript coding exercise using arrays. Write a program that displays a
                         string in reverse.</h5>
                 </div>
