fix: Page title

--- a/app/fizzbuzz.html
+++ b/app/fizzbuzz.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>FizzBuzz</title>
+    <title>JSJunction | FizzBuzz</title>
     <link href="/css/site.css" rel="stylesheet">
     <link href="/css/project.css" rel="stylesheet">
     <!-- Bootstrap -->
